<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp" >

    <Button
        android:id="@+id/btn_apps"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:background="@drawable/selector_main_apps"
        android:drawableLeft="@drawable/ba_icon_apps"
        android:drawablePadding="10dip"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:singleLine="true"
        android:text="@string/btn_apps"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_media"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/selector_main_media"
        android:drawableLeft="@drawable/ba_icon_media"
        android:drawablePadding="10dip"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:singleLine="true"
        android:text="@string/btn_media"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_tweaks"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_media"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_main_tweaks"
        android:drawableLeft="@drawable/ba_icon_tweaks"
        android:drawablePadding="10dip"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:singleLine="true"
        android:text="@string/btn_tweaks"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_themes"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/btn_tweaks"
        android:layout_alignBottom="@+id/btn_tweaks"
        android:layout_alignParentRight="true"
        android:background="@drawable/selector_main_themes"
        android:drawableLeft="@drawable/ba_icon_themes"
        android:drawablePadding="10dip"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:singleLine="true"
        android:text="@string/btn_themes"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cat_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_tweaks"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="19dp"
        android:text="@string/str_applications"
        android:textColor="#999999"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_apps1"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cat_apps"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_featured"
        android:drawableTop="@drawable/ic_launcher"
        android:text="Button"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_apps2"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_alignBaseline="@+id/btn_apps1"
        android:layout_alignBottom="@+id/btn_apps1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/selector_featured"
        android:drawableTop="@drawable/ic_launcher"
        android:text="Button"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_apps3"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_alignBaseline="@+id/btn_apps1"
        android:layout_alignBottom="@+id/btn_apps1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/selector_featured"
        android:drawableTop="@drawable/ic_launcher"
        android:text="Button"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_tweaks1"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/btn_apps1"
        android:layout_below="@+id/cat_tweaks"
        android:background="@drawable/selector_featured"
        android:drawableTop="@drawable/ic_launcher"
        android:text="Button"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_tweaks2"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_alignBaseline="@+id/btn_tweaks1"
        android:layout_alignBottom="@+id/btn_tweaks1"
        android:layout_alignLeft="@+id/btn_apps2"
        android:background="@drawable/selector_featured"
        android:drawableTop="@drawable/ic_launcher"
        android:text="Button"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_tweaks3"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_alignBaseline="@+id/btn_tweaks2"
        android:layout_alignBottom="@+id/btn_tweaks2"
        android:layout_alignLeft="@+id/btn_apps3"
        android:background="@drawable/selector_featured"
        android:drawableTop="@drawable/ic_launcher"
        android:text="Button"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/cat_tweaks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_tweaks1"
        android:layout_below="@+id/btn_apps1"
        android:layout_marginTop="23dp"
        android:text="@string/str_tweaks"
        android:textColor="#999999"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/id_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="@string/app_name"
        android:textColor="#CCCCCC"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>