<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"  >

    <Button
        android:id="@+id/btn_apps"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/media_button_bg_normal"
        android:drawableLeft="@drawable/ba_icon_apps"
        android:drawablePadding="10dip"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:singleLine="true"
        android:text="@string/btn_apps"
        android:textColor="#999999"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_media"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/media_button_bg_normal"
        android:drawableLeft="@drawable/ba_icon_apps"
        android:drawablePadding="10dip"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:singleLine="true"
        android:text="@string/btn_media"
        android:textColor="#999999"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_tweaks"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_media"
        android:layout_marginTop="5dp"
        android:background="@drawable/media_button_bg_normal"
        android:drawableLeft="@drawable/ba_icon_apps"
        android:drawablePadding="10dip"
        android:gravity="center|center_vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:singleLine="true"
        android:text="@string/btn_tweaks"
        android:textColor="#999999"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_themes"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/btn_tweaks"
        android:layout_alignBottom="@+id/btn_tweaks"
        android:layout_alignParentRight="true"
        android:background="@drawable/media_button_bg_normal"
        android:drawableLeft="@drawable/ba_icon_apps"
        android:drawablePadding="10dip"
        android:gravity="left|center_vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:singleLine="true"
        android:text="@string/btn_themes"
        android:textColor="#999999"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/cat_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_tweaks"
        android:layout_marginTop="19dp"
        android:text="@string/str_applications"
        android:textStyle="italic"
        android:textColor="#999999" />

    <Button
        android:id="@+id/btn_apps1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/cat_apps"
        android:layout_marginTop="2dp"
        android:textSize="14sp"
        android:background="@drawable/featured_button_bg_normal"
        android:drawableTop="@drawable/ic_launcher"
        android:text="Button" />

    <Button
        android:id="@+id/btn_apps2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBaseline="@+id/btn_apps1"
        android:layout_alignBottom="@+id/btn_apps1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/featured_button_bg_normal"
        android:drawableTop="@drawable/ic_launcher"
        android:textSize="14sp"
        android:text="Button" />

    <Button
        android:id="@+id/btn_apps3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBaseline="@+id/btn_apps1"
        android:layout_alignBottom="@+id/btn_apps1"
        android:layout_alignParentRight="true"
        android:background="@drawable/featured_button_bg_normal"
        android:drawableTop="@drawable/ic_launcher"
        android:textSize="14sp"
        android:text="Button" />
    
</RelativeLayout>