<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp" >

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/str_apppage" />

    <com.spxc.stockpile.widgets.TextView_Roboto
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imgIcon"
        android:text="@string/str_apppage" 
        android:layout_marginLeft="7dp"
        android:textSize="16sp">
        </com.spxc.stockpile.widgets.TextView_Roboto>

    <TextView
        android:id="@+id/txtDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAppName"
        android:layout_below="@+id/txtAppName"
        android:text="@string/str_apppage"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:layout_marginTop="3dp"/>

    <Button
        android:id="@+id/btnInstall"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@+id/imgIcon"
        android:layout_alignRight="@+id/txtAppName"
        android:background="@drawable/selector_app_install"
        android:text="@string/btn_install"
        android:textColor="#FFFFFF"
        android:textAllCaps="true"
        android:textSize="8sp" 
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/btnOpen"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_alignBaseline="@+id/btnInstall"
        android:layout_alignBottom="@+id/btnInstall"
        android:layout_alignParentRight="true"
        android:background="@drawable/selector_featured"
        android:text="@string/btn_open"
        android:textAllCaps="true"
        android:textColor="#999999"
        android:textSize="8sp" />

    <ProgressBar
        android:id="@+id/pLoader"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/btnUninstall"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnInstall"
        android:background="@drawable/selector_featured"
        android:text="@string/btn_uninstall"
        android:textAllCaps="true"
        android:layout_marginTop="7dp"
        android:textColor="#999999"
        android:textSize="8sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnUninstall"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/progressBar"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>